--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -28,6 +28,273 @@ export const Tags = ({ date, tags = [] }) => (
   </div>
 );
 
+## Mute tests
+
+<Tags 
+  date="February 2025"
+/>
+
+We’re pleased to introduce the Mute Test feature! 
+
+This allows you to run tests without triggering alerts, giving you greater control over notifications while still monitoring your data. It’s perfect for scenarios where you’re testing new data sets, refining thresholds, or adjusting test logic—without unnecessary noise. 
+
+With this feature, you can ensure everything is working as expected before enabling alerts, keeping your team focused and informed only when it truly matters.
+
+Learn more how to [mute tests](https://docs.elementary-data.com/features/alerts-and-incidents/alerts-and-incidents-overview) in our docs.
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079310/Changelog/Mute_Tests_gif_omflcw.gif)
+
+## Edit dbt Tests Directly from the Elementary UI
+
+<Tags 
+  date="February 2025"
+/>
+
+We’re thrilled to announce a long-awaited feature: the ability to edit **dbt tests** directly from the Elementary UI!
+
+Until now, the UI only supported test creation, but this release marks the first milestone in providing full test editing capabilities. You can now update test configurations from the **Test Overview** screen, including settings like owners, tags, severity levels, and descriptions. All changes automatically generate a pull request, ensuring proper version control and documentation.
+
+This is just the beginning—more enhancements for editing test configurations are on the way!
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079259/Changelog/Alert_destination_is_Connected_udazqq.png)
+
+## Custom metadata
+
+<Tags 
+  date="February 2025"
+/>
+
+Custom attributes from ****[dbt’s meta field](https://docs.getdbt.com/reference/resource-configs/meta) are now visible in the Elementary catalog, enhancing context and improving collaboration by bringing key metadata directly into your observability workflows.
+
+We understand that not all meta attributes are relevant for every team. If there are specific meta attributes you’d like to see in the catalog, please reach out to us at Elementary. Let us know your preferences, and we’ll configure the catalog to display the metadata most valuable to you.
+
+https://www.figma.com/design/8eLzVmlrf4c2v13PVTVcVv?node-id=55-5726#1119830403
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079225/Changelog/Fields_j6jumx.png)
+
+## Manually Set SLAs for Freshness Tests
+
+<Tags 
+  date="February 2025"
+/>
+
+You can now set a manual threshold for Elementary's freshness tests. 
+
+While our automated freshness test uses anomaly detection to identify unusual delays in table updates, sometimes you need more precise control. With manual thresholds, you can explicitly define when a freshness test should fail, giving you full control over monitoring your data freshness requirements. Simply set your desired threshold, and you'll be notified whenever a table hasn't refreshed within that time limit.
+
+Learn more about [automated freshness tests](https://docs.elementary-data.com/features/anomaly-detection/automated-freshness) in our docs.
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079192/Changelog/image_55_ktvski.png)
+
+## Connect Multiple BI Tools in Lineage
+
+<Tags 
+  date="February 2025"
+  tags={["Integration"]}
+/>
+
+Elementary now supports connecting multiple BI tools, bringing even more visibility into your data. Once connected, BI metadata will appear in both the **catalog** and the **lineage graph**.
+
+Currently, Elementary integrates with **Looker**, **Tableau**, **Power BI**, and **Sigma**—with more to come!
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079164/Changelog/image_43_hgu2zu.png)
+
+## Easier Test Creation
+
+<Tags 
+  date="February 2025"
+/>
+
+We improved the test creation UI to make it easier to create tests. Given the fantastic response to the [dbt tests hub](https://www.elementary-data.com/dbt-test-hub) we introduced a few months ago, we decided to bring the test hub into the platform. You can now search directly from the Elementary UI, select the desired test, and create it directly from the UI using the YAML format provided with examples and explanations, then add owners, tags, severity, etc, and open a PR.
+
+Learn more about [test creation in Elementary](https://docs.elementary-data.com/features/data-tests/data-tests-overview).
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079128/Changelog/New_Test_Creation_UI_new_eftsw3.gif)
+
+## New Integrations: Jira & Linear 
+
+<Tags 
+  date="February 2025"
+  tags={["Integration"]}
+/>
+
+We’re excited to announce that you can now integrate Elementary with Jira or Linear to streamline your incident management process.
+
+With this integration, you can create new Jira or Linear tickets directly from Elementary. Once you connect your account, a **‘Create Ticket’** button will appear next to each incident in the incident management screen.
+
+Jira and Linear tickets created through Elementary will automatically include key details like the test name, description, query, results, and more—ensuring all relevant context is captured and shared.
+
+Learn more about connecting Elementary to [Jira](https://docs.elementary-data.com/cloud/integrations/alerts/jira) or [Linear](https://docs.elementary-data.com/cloud/integrations/alerts/linear) in our docs.
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079070/Changelog/image_6_dubecv.png)
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079094/Changelog/image_51_r2pbsr.png)
+
+## Critical Assets
+
+<Tags 
+  date="February 2025"
+/>
+
+We’re excited to introduce the **Critical Assets** feature, designed to help you prioritize and protect your most important data assets. 
+
+**What is a Critical Asset?**
+
+A critical asset is ***any*** data asset (such as a model, exposure, or report) that plays a crucial role in your ***company's*** data ecosystem. Issues affecting these assets can have a significant impact on business operations, dashboards, and decision-making.
+
+Marking an asset as **critical** ensures it receives **higher priority in monitoring and alerting**, helping you quickly identify and respond to issues that may impact it.
+
+Once an asset is marked as **critical**, you will be able to:
+
+✅ **Identify it in the UI**, where it will be visually highlighted.
+
+✅ **Receive alerts** when upstream issues may impact the critical asset.
+
+✅ **Filter incidents** by their impact on critical assets.
+
+Learn more about how to use Critical Assets in our [docs.](https://docs.elementary-data.com/features/data-governance/critical_assets)
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740079005/Changelog/Critical_Assets_3_gjw9nc.gif)
+
+## Compact navbar
+
+<Tags 
+  date="November 2024"
+/>
+
+You can now minimize the navigation bar for a better experience on smaller screens.
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740078816/Changelog/Compact_Nav_wcfmif.gif)
+
+## Sigma integration
+
+<Tags 
+  date="November 2024"
+  tags={["Integration"]}
+/>
+
+Elementary now connects with Sigma!
+
+With this integration, Elementary automatically extends data lineage down to the workbook page and element level. This means you’ll have full end-to-end visibility into your data, making it easier to understand downstream dependencies, also known as exposures. [Learn more about connecting to Sigma](https://docs.elementary-data.com/cloud/integrations/bi/sigma).
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740078782/Changelog/Screenshot_2024-12-09_at_16.31.03_etmoap.png)
+
+## Performance improvements
+
+<Tags 
+  date="November 2024"
+  tags={["Performance"]}
+/>
+
+In the past few months, we have made significant performance efforts to improve loading times within our platform. In particular, we created dedicated and efficient GraphQL API endpoints in our backend to speed up the dashboard, which now loads in a couple of seconds and usually less. 
+
+We have also made considerable efforts to improve our database infrastructure to support additional scale and customers, which has resulted in an overall improvement throughout the platform.
+
+## Lineage Export
+
+<Tags 
+  date="November 2024"
+  tags={["Lineage"]}
+/>
+
+Before making changes to a column or any other asset, you can assess the impact by exporting a textual summary of its lineage as a .csv file. The export includes:
+
+- Upstream and downstream assets
+- Number of hops
+- Names, owners, and tags of each dependency
+
+You can export the lineage for either a column or a table. This feature is accessible from both the lineage screen and the test overview dependencies tab.
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740078717/Changelog/Lineage_Export_mesth8.gif)
+
+## Enhanced Test Results
+
+<Tags 
+  date="November 2024"
+  tags={["Integrations"]}
+/>
+
+The test overview side panel, previously only accessible from the incidents page, is now available on the test results page as well. This means you can view a full test overview even for tests that aren’t failing, not just for incidents.
+
+We’ve also introduced several updates to the panel:
+
+- View asset dependencies directly in a table format, with the option to export them as a .csv file or explore the lineage graph.
+- Inspect the asset in the catalog with a single click.
+- Disable automated freshness or volume tests directly from the test overview screen.
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740078639/Changelog/Test_Overview_naed5h.gif)
+
+## Custom Resource-based Roles
+
+<Tags 
+  date="October 2024"
+/>
+
+Elementary now allows the creation of custom roles with access controls tailored to specific data.
+
+These roles are based on criteria such as environments, model path, dbt tags, or dbt owners. This is in addition to the existing access control (View, Edit, Admin). This ensures that users can only access the data they need, helping create focus and security. 
+
+For now, our team will create the custom role for you. In the future, you will be able to do this on your own in the UI. To create a custom role reach out to us in the mutual Slack support channel, and we will create it for you. When the role is created, it will appear in the roles dropdown you see when inviting a new user to Elementary.
+
+## Bitbucket
+
+<Tags 
+  date="October 2024"
+  tags={["Integrations"]}
+/>
+
+You can now connect Elementary to your Bitbucket code repository, where your dbt project code is managed. Once connected, Elementary will open PRs with configuration changes.
+
+https://docs.elementary-data.com/cloud/integrations/code-repo/bitbucket 
+
+## Power BI
+
+<Tags 
+  date="October 2024"
+  tags={["Integrations"]}
+/>
+
+You can now connect Power BI to Elementary!
+
+This will provide you with end-to-end data lineage to understand your downstream dependencies. 
+Once connected, Elementary will automatically and continuously extend the lineage to the report/dashboard level.
+
+https://docs.elementary-data.com/cloud/integrations/bi/power-bi
+
+## Elementary + Atlan: See your Elementary data quality insights in Atlan!
+
+<Tags 
+  date="October 2024"
+  tags={["Integrations"]}
+/>
+
+We introduced a new test overview side panel that will make it much easier to investigate incidents. 
+
+This overview is available directly from the Incidents Management screen and will soon be available from additional screens (test results, test coverage). 
+
+The new view includes the complete test configuration and execution history, and for each result, it includes the result description, test query, and a row sample/anomaly chart (depending on the test type) 
+
+This new side panel is also available for model build error incidents, allowing you to view dbt model build error messages right in the Elementary UI for the first time!
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740078239/Changelog/Screenshot_2024-09-29_at_17.17.16_mpw6ni.png)
+
+## A better way to triage test and model failures
+
+<Tags 
+  date="September 2024"
+  tags={["Incident management"]}
+/>
+
+We introduced a new test overview side panel that will make it much easier to investigate incidents. 
+
+This overview is available directly from the Incidents Management screen and will soon be available from additional screens (test results, test coverage). 
+
+The new view includes the complete test configuration and execution history, and for each result, it includes the result description, test query, and a row sample/anomaly chart (depending on the test type) 
+
+This new side panel is also available for model build error incidents, allowing you to view dbt model build error messages right in the Elementary UI for the first time!
+
+![](https://res.cloudinary.com/diuctyblm/image/upload/v1740078239/Changelog/Screenshot_2024-09-29_at_17.17.16_mpw6ni.png)
+
 ## Introducing: Incident Management
 
 <Tags 
