--- a/docs/features/alerts-and-incidents/incident-management.mdx
+++ b/docs/features/alerts-and-incidents/incident-management.mdx
@@ -37,7 +37,7 @@ These can be set in the Incidents page, or from an alert in integrations that su
     - If you assign an incident to a user, it is recommended to leave the incident `Open` until the user changes status to `Acknowledged`.
 - **Incident severity**: Severity of an incident can be Low, Normal, High or Critical. By default, model errors are set to Critical, test failures set to High and warnings are marked as Normal, but the severity can be changed manually.  _Coming soon_ : Severity will be automated by an analysis of the impacted assets.
 
-<note> Incident severity is used to prioritize incidents and to set the urgency of resolving them. it is not the same as dbt test severity </note>
+<Note> Incident severity is used to prioritize incidents and to set the urgency of resolving them. it is not the same as dbt test severity </Note>
 
 ## Incidents overview and metrics
 
