try to fix docs issue

--- a/docs/features/alerts-and-incidents/alert-rules.mdx
+++ b/docs/features/alerts-and-incidents/alert-rules.mdx
@@ -19,15 +19,16 @@ and for supporting tools a specific channel.
   matching rule, and no further rules are evaluated. 
 </Tip>
 
-<iframe
-width="700"
-height="400"
-src="https://res.cloudinary.com/diuctyblm/video/upload/v1720004495/alert-rules_vlbxre.mp4"
-frameborder="0"
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-allowfullscreen
-alt="Elementary Alert Rules"
-></iframe>
+
+<video
+  autoPlay
+  muted
+  loop
+  playsInline
+  className="w-full aspect-video"
+  src="https://res.cloudinary.com/diuctyblm/video/upload/v1720004495/alert-rules_vlbxre.mp4"
+></video>
+
 
 ### Default alert rule
 
