--- a/docs/features/collaboration-and-communication/catalog.mdx
+++ b/docs/features/collaboration-and-communication/catalog.mdx
@@ -22,6 +22,9 @@ From each dataset, you can navigate directly to its lineage and test results, en
 ## Key Features
 ### Easily Discoverable Data Assets
 Quickly and easily navigate the catalog using the side tree and its search bar. Easily find tables, views, BI dashboard and more.
+You can view the data assets by their location in the DWH or in the dbt project, and group them by tags, owners or path.
+
+<img width="300" src="https://res.cloudinary.com/dvmtceykh/image/upload/v1740577485/589e1160-bc0e-4ac5-9751-634568975b3e.png" alt="Catalog tree" />
 
 ### Custom Metadata Support
 Need to display additional metadata fields from your dbt `meta` config? Reach out to our team to customize the catalog with fields that best fit your data workflows.
