add tally feature link

--- a/docs/features/collaboration-and-communication/catalog.mdx
+++ b/docs/features/collaboration-and-communication/catalog.mdx
@@ -41,6 +41,14 @@ The catalog content is automatically generated from the descriptions maintained 
 In addition, Elementary enriches the catalog with health scores, test coverage status and results, as well as metadata from your DWH information schema, providing a comprehensive view of your datasets.
 
 ## Coming soon
-- Edit asset descriptions, tags and owners, for a single asset or in bulk
-- Easily find gaps in your data governance coverage such as missing descriptions, owners or tags
-- Discover datasets by smart search
+<CardGroup cols={1}>
+  <Card title="Data Asset Editing" href="https://tally.so/r/nGQVLj?feature=Data Asset Editing">
+    Edit asset descriptions, tags and owners, for a single asset or in bulk
+  </Card>
+  <Card title="Data Governance Gaps" href="https://tally.so/r/nGQVLj?feature=Data Governance Gaps">
+    Easily find gaps in your data governance coverage such as missing descriptions, owners or tags
+  </Card>
+  <Card title="Smart Search" href="https://tally.so/r/nGQVLj?feature=Smart Search">
+    Discover datasets by smart search
+  </Card>
+</CardGroup>
