--- a/docs/features/collaboration-and-communication/catalog.mdx
+++ b/docs/features/collaboration-and-communication/catalog.mdx
@@ -49,6 +49,6 @@ In addition, Elementary enriches the catalog with health scores, test coverage s
     Easily find gaps in your data governance coverage such as missing descriptions, owners or tags
   </Card>
   <Card title="Smart Search" href="https://tally.so/r/nGQVLj?feature=Smart Search">
-    Discover datasets by smart search
+    Discover datasets by smart AI-based search, from Slack or the UI
   </Card>
 </CardGroup>
