edit automated tests

--- a/docs/_snippets/cloud/features/anomaly-detection/freshness-configuration.mdx
+++ b/docs/_snippets/cloud/features/anomaly-detection/freshness-configuration.mdx
@@ -1,1 +1,6 @@
-- **Sensitivity** - You can set the monitor's sensitivity levels to *Low*, *Medium*, or *High*. For each level, you will see a simulation of the change impact on the latest result, and you can use the`Simulate Configuration` button to examine the change impact. 
+You can choose between 2 detection methods for the Freshness monitor- Automatic and Manual.
+- **Automatic** - Elementary uses machine learning models to detect anomalies in the data freshness. This is the default setting. You can change the sensitivity level to *Low*, *Medium*, or *High*.
+For each level, you will see a simulation of the change impact on the latest result, and you can use the`Simulate Configuration` button to examine the change impact.
+- **Manual** - You can set the SLA breach threshold for the freshness monitor manually. This is useful for assets that are updated regularly at the same time every day, hour or week.
+
+<img width="500" src="https://res.cloudinary.com/dvmtceykh/image/upload/v1740599403/30861cc3-b743-4125-922c-25df0e78b75c.png" alt="Freshness monitor configuration" />
