update coming soon

--- a/docs/features/collaboration-and-communication/catalog.mdx
+++ b/docs/features/collaboration-and-communication/catalog.mdx
@@ -41,6 +41,8 @@ The catalog content is automatically generated from the descriptions maintained 
 In addition, Elementary enriches the catalog with health scores, test coverage status and results, as well as metadata from your DWH information schema, providing a comprehensive view of your datasets.
 
 ## Coming soon
+Click on the links below to be notified when these features are released!
+
 <CardGroup cols={1}>
   <Card title="Data Asset Editing" href="https://tally.so/r/nGQVLj?feature=Data Asset Editing">
     Edit asset descriptions, tags and owners, for a single asset or in bulk
