--- a/docs/features/anomaly-detection/automated-monitors.mdx
+++ b/docs/features/anomaly-detection/automated-monitors.mdx
@@ -28,7 +28,7 @@ Within an average of a few hours, your automated monitors will be operational.
 By default, Elementary collects at least 21 days of historical metadata.
 
 The automated monitors are created for all the sources in your dbt project.
-If you would like a different configuration of which tables to create the monitors on, you can reach out to us.
+If you would like a different configuration of which tables to create the monitors on, or adding monitors for all models, you can reach out to us.
 
 You can fine tune the [configuration](/features/anomaly-detection/monitors-configuration) and [provide feedback](/features/anomaly-detection/monitors-feedback) to adjust the detection to your needs. 
 
