--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -20,10 +20,11 @@ See here a [detailed features comparison](/overview/cloud-vs-oss).
   </Card>
 </CardGroup>
 
-### CLI Guides
+### What can you do with Elementary OSS?
 
 <CardGroup cols={2}>
-  <Card title="Generate a report" icon="browsers" iconType="solid" href="/oss/guides/generate-report-ui" />
+
+  <Card title="Generate an observability report" icon="browsers" iconType="solid" href="/oss/guides/generate-report-ui" />
 
   <Card title="Send alerts" icon="bell-exclamation" href="/oss/guides/alerts/elementary-alerts" />
 
