--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -6,19 +6,7 @@ icon: "square-terminal"
 
 Elementary OSS is a CLI tool you can deploy with the [Elementary dbt package](/guides/modules-overview/dbt-package) and orchestrate to send Slack alerts and self-host the Elementary report.
 
-To gain the most value from Elementary, we recommend using the [Elementary Cloud Platform](/cloud/introduction).
-
-See here a [detailed features comparison](/overview/cloud-vs-oss).
-
-<CardGroup cols={1}>
-  <Card title="Quickstart Elementary OSS" href="/oss/quickstart/quickstart-cli-package" icon="circle-play" iconType="solid">
-    Install the Elementary dbt package and CLI tool.
-  </Card>
-
-  <Card title="Webinar: Getting Started with Elementary OSS" href="https://www.elementary-data.com/webinar/getting-started-with-elementary" icon="video">
-    Watch the webinar to learn how to get started with the Elementary dbt package and CLI tool.
-  </Card>
-</CardGroup>
+To gain the most value from Elementary, we recommend using the [Elementary Cloud Platform](/cloud/introduction). See here a [detailed features comparison](/overview/cloud-vs-oss).
 
 ### What can you do with Elementary OSS?
 
@@ -42,3 +30,14 @@ See here a [detailed features comparison](/overview/cloud-vs-oss).
 ### Supported adapters
 
 <Snippet file="oss/adapters-cards.mdx" />
+
+
+<CardGroup cols={1}>
+  <Card title="Quickstart Elementary OSS" href="/oss/quickstart/quickstart-cli-package" icon="circle-play" iconType="solid">
+    Install the Elementary dbt package and CLI tool.
+  </Card>
+
+  <Card title="Webinar: Getting Started with Elementary OSS" href="https://www.elementary-data.com/webinar/getting-started-with-elementary" icon="video">
+    Watch the webinar to learn how to get started with the Elementary dbt package and CLI tool.
+  </Card>
+</CardGroup>
