--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -3,12 +3,11 @@ title: "Elementary OSS"
 sidebarTitle: "Introduction"
 icon: "square-terminal"
 ---
+**Elementary OSS is a CLI tool that works alongside the [Elementary dbt package](https://www.notion.so/guides/modules-overview/dbt-package).** With the dbt package, you gain powerful anomaly detection tests and metadata tables to monitor data quality trends over time.
 
-Elementary OSS is a CLI tool that works alongside the [Elementary dbt package](https://www.notion.so/guides/modules-overview/dbt-package). With the dbt package, you gain powerful anomaly detection tests and metadata tables to monitor data quality trends over time.
+By deploying the CLI, you can **send alerts and self-host the Elementary data observability report**, a comprehensive view of your dbt runs and all dbt test results, helping you track data lineage, test coverage, and overall pipeline health. 
 
-By deploying the CLI, you can send Slack alerts and self-host the Elementary report, a comprehensive view of your dbt runs and all dbt test results, helping you track data lineage, test coverage, and overall pipeline health. Quickly identify issues, monitor trends, and assess data reliability across your workflows.
-
-For a scalable and collaborative data quality platform, look into the [Elementary Cloud Platform](https://www.notion.so/cloud/introduction) - A fully managed, enterprise-ready solution with ML-powered anomaly detection, flexible data discovery, integrated incident management, and collaboration tools—all with minimal setup and infrastructure maintenance. See here a [detailed features comparison](https://www.notion.so/overview/cloud-vs-oss).
+For a scalable and collaborative data quality platform, **look into the [Elementary Cloud Platform](https://www.notion.so/cloud/introduction)** - A fully managed, enterprise-ready solution with ML-powered anomaly detection, flexible data discovery, integrated incident management, and collaboration tools—all with minimal setup and infrastructure maintenance. See here a [detailed features comparison](https://www.notion.so/overview/cloud-vs-oss).
 
 ### What can you do with Elementary OSS?
 
