--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -12,23 +12,18 @@ The platform provides out-of-the-box monitoring for critical issues, tools to ef
 Elementary promotes ownership and collaboration on incidents, and enables the whole data organization to take an active role in the data quality process.
 By automatically measuring and tracking data health, it helps teams transition from reactive firefighting to proactively communicating data health to consumers and stakeholders.
 
-<Card title="When do I need a data observability platform? " href="/resources/business-case-data-observability-platform" />
 
-## Cloud Platform Features
+<CardGroup cols={3}>
+  <Card title="Cloud Platform Features" icon="diagram-project" href="https://docs.elementary-data.com/cloud/features" >
+  </Card>
+ <Card title="Integrations" icon="puzzle-piece" href="https://docs.elementary-data.com/features/integrations" >
+  </Card>
+  <Card title="Architecture and Security" icon="user-lock" href="https://docs.elementary-data.com/cloud/general/security-and-privacy" >
+  </Card>
+</CardGroup>=
 
-<Snippet file="cloud/features.mdx" />
+##Get started with Elementary Cloud
 
-## Architecture and Security
-
-<Snippet file="cloud/how-it-works.mdx" />
-
-Our product is designed with [Security and Privacy](/cloud/general/security-and-privacy) in mind.
-
-<Check>
-  **SOC 2 certification:** Elementary is SOC2 type II certified!
-</Check>
-
-## How to Start?
 
 <Card title="Quick start" href="/quickstart" />
 
