Update CLoud introduction

--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -20,9 +20,9 @@ By automatically measuring and tracking data health, it helps teams transition f
   </Card>
   <Card title="Architecture and Security" icon="user-lock" href="https://docs.elementary-data.com/cloud/general/security-and-privacy" >
   </Card>
-</CardGroup>=
+</CardGroup>
 
-##Get started with Elementary Cloud
+## Get started with Elementary Cloud
 
 
 <Card title="Quick start" href="/quickstart" />
