--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -14,17 +14,17 @@ By automatically measuring and tracking data health, it helps teams transition f
 
 
 <CardGroup cols={3}>
-  <Card title="Cloud Platform Features" icon="diagram-project" href="https://docs.elementary-data.com/cloud/features" >
+  <Card title="Cloud Platform Features" icon="diagram-project" href="/cloud/features" >
   </Card>
- <Card title="Integrations" icon="puzzle-piece" href="https://docs.elementary-data.com/features/integrations" >
+ <Card title="Integrations" icon="puzzle-piece" href="/features/integrations" >
   </Card>
-  <Card title="Architecture and Security" icon="user-lock" href="https://docs.elementary-data.com/cloud/general/security-and-privacy" >
+  <Card title="Architecture and Security" icon="user-lock" href="/cloud/general/security-and-privacy" >
   </Card>
 </CardGroup>
 
 ## Get started with Elementary Cloud
 
 
-<Card title="Quick start" href="/quickstart" />
+<Card title="Quickstart" href="/quickstart" />
 
 <Card title="Book a call with our team" href="https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs" />
