Update Cloud introduction

--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -22,9 +22,14 @@ By automatically measuring and tracking data health, it helps teams transition f
   </Card>
 </CardGroup>
 
+<Card title="Webinar: The Elementary Cloud Platform" icon="circle-play" href="https://www.elementary-data.com/webinar/the-elementary-cloud-platform" />
+
+
 ## Get started with Elementary Cloud
 
+<CardGroup cols={2}>
 
-<Card title="Quickstart" href="/quickstart" />
-
-<Card title="Book a call with our team" href="https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs" />
+<Card title="Quickstart" href="/quickstart">
+  </Card>
+<Card title="Book a call with our team" href="https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs">
+  </Card>
