--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -33,3 +33,4 @@ By automatically measuring and tracking data health, it helps teams transition f
   </Card>
 <Card title="Book a call with our team" href="https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs">
   </Card>
+</CardGroup>
