--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -11,6 +11,8 @@ For a scalable and collaborative data quality platform, **look into the [Element
 
 ### What can you do with Elementary OSS?
 
+<Card title="Utilize the Elementary dbt package for Elementary tests and tables" icon="gear" iconType="solid" href="/oss/deployment-and-configuration/elementary-in-production" />
+
 <CardGroup cols={2}>
 
   <Card title="Generate an observability report" icon="browsers" iconType="solid" href="/oss/guides/generate-report-ui" />
