--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -6,11 +6,7 @@ icon: "cloud"
 
 **Elementary is a data observability platform tailored for dbt-first data organizations.**
 
-The unique dbt-native architecture seamlessly integrates into engineers' workflows, ensuring ease of use and smooth adoption.
-The platform provides out-of-the-box monitoring for critical issues, tools to effortlessly increase coverage, and integrations for end-to-end visibility across the data stack.
-
-Elementary promotes ownership and collaboration on incidents, and enables the whole data organization to take an active role in the data quality process.
-By automatically measuring and tracking data health, it helps teams transition from reactive firefighting to proactively communicating data health to consumers and stakeholders.
+The Elementary Cloud Platform integrates into dbt workflows, providing a developer-centric tool for engineers to maintain and govern data quality rules while also offering a cloud-based interface for business users and data stewards. This enables engineers to proactively identify and resolve data issues while consumers can monitor data health, receive notifications, view health scores, and add their own validations in a user-friendly environment. It offers advanced features like automated freshness and volume monitoring, ML-powered anomaly detection, a simple data catalog, and rich integrations.
 
 
 <CardGroup cols={3}>
