design changes to okta guide

--- a/docs/cloud/guides/setup-okta.mdx
+++ b/docs/cloud/guides/setup-okta.mdx
@@ -1,6 +1,9 @@
 
+---
+title: "Setup Okta"
+---
 
-## Authentication & SSO Integration
+## Authentication & SSO Integrationfir
 
 ### Supported Authentication Protocols
 
