design changes to okta guide

--- a/docs/cloud/guides/setup-okta.mdx
+++ b/docs/cloud/guides/setup-okta.mdx
@@ -3,7 +3,7 @@
 title: "Setup Okta"
 ---
 
-## Authentication & SSO Integrationfir
+## Authentication & SSO Integration
 
 ### Supported Authentication Protocols
 
