Add Databricks setup documentation for unstructured data tests

--- a/docs/data-tests/unstructured-data-tests/snowflake-setup.mdx
+++ b/docs/data-tests/unstructured-data-tests/snowflake-setup.mdx
@@ -4,7 +4,7 @@ title: "Snowflake setup"
 
 # Setting Up Snowflake Cortex AI LLM Functions
 
-This guide provides instructions on how to enable Snowflake Cortex AI LLM functions, which is a prerequisite for running Elementary unstructured data validation tests.
+This guide provides instructions on how to enable Snowflake Cortex AI LLM functions, which is a prerequisite for running Elementary unstructured data validation tests on Snowflake.
 
 ## What is Snowflake Cortex?
 
@@ -42,7 +42,7 @@ Snowflake Cortex provides access to various industry-leading LLM models with dif
 * **Llama Models (Meta)**: Including llama3.2-1b, llama3.2-3b, llama3.1-8b, and llama2-70b-chat.
 * **Gemma Models (Google)**: Including gemma-7b for code and text completion tasks.
 
-> **Note**: While developing the tests we worked with `claude-3-5-sonnet` so we recommend using this model as a default.
+> **Note**: While developing the tests we worked with `claude-3-5-sonnet` so we recommend using this model as a default when running unstructured data tests in Snowflake.
 
 ## Permissions
 
