--- a/docs/data-tests/unstructured-data-tests/bigquery-setup.mdx
+++ b/docs/data-tests/unstructured-data-tests/bigquery-setup.mdx
@@ -1,57 +1,95 @@
 ---
 title: "BigQuery setup"
+description: "Learn how to configure BigQuery to use Vertex AI models for unstructured data validation tests"
 ---
 
+# BigQuery Setup for Unstructured Data Tests
 
-Step 1 - enable Vertex AI API
-In your Google cloud console go to `APIs & Services` \ `API Library` \ Browse and search for `Vertex AI API`. Click on it and enable this API.
+Elementary's unstructured data validation tests leverage BigQuery ML and Vertex AI models to perform advanced AI-powered validations. This guide will walk you through the setup process.
 
-Step 2 - creating a remote connection to a Vertex AI model
-Elementary unstructured data validation tests perform AI tasks in BigQuery ML by using pre-trained Vertex AI models. 
-To access these models we need to create a remote model in BigQuery ML that represents the Vertex AI model's endpoint. 
+## Prerequisites
 
-To do that we need to start by creating a remote connection in BigQuery. Go to the Google cloud console \ BigQuery. 
-Then in the explorer click '+' (TODO: add screenshot in cloudinary). 
-Then click on `connections to external data sources` (TODO: add screenshot in cloudinary). 
-Change connection type to be `Vertex AI remote models, remote functions and BigLake (Cloud Resource)`. 
-If your model and dataset are in the same region, select that region and otherwise select multi-region (TODO: add screenshot in cloudinary).
+Before you begin, ensure you have:
+- A Google Cloud account with appropriate permissions
+- Access to BigQuery and Vertex AI services
+- A BigQuery dataset where you'll create your model, that will be used by Elementary's data validation tests. This is the dataset where you have unstructured data stored and that you want to apply validations on.
 
-In your BigQuery explorer, open external connection, find your newly created remote connection and click on it.
-Copy the service account ID (TODO: add screenshot in cloudinary or a loom video).
+## Step 1: Enable the Vertex AI API
 
-Step 3 - Giving the remote connection service account permissions to access Vertex AI
-In your Google cloud console go now to IAM and click on '+Grant Access'. 
-Under new principales paste the previously copied remote connection service account ID and select a role of `Vertex AI User`. Now save it (TODO: add screenshot in cloudinary).
+1. Navigate to the Google Cloud Console
+2. Go to **APIs & Services** > **API Library**
+3. Search for "Vertex AI API"
+4. Click on the API and select **Enable**
 
-Step 4 - creating an LLM model interface in your dataset using the remote connection  
-Click again on the previously created remote connection (in your BigQuery explorer go to `External connections` and find your remote connection) and copy the connection ID.
-It should be a string that looks like - projects/<your project name>/locations/<your region>/connections/<your connection name>
+## Step 2: Create a Remote Connection to Vertex AI
 
-Run the following SQL - 
+Elementary's unstructured data validation tests use BigQuery ML to access pre-trained Vertex AI models. To establish this connection:
+
+1. Navigate to the Google Cloud Console > **BigQuery**
+2. In the Explorer panel, click the **+** button
+3. Select **Connections to external data sources**
+4. Change the connection type to **Vertex AI remote models, remote functions and BigLake (Cloud Resource)**
+5. Select the appropriate region:
+   - If your model and dataset are in the same region, select that specific region
+   - Otherwise, select multi-region
+
+After creating the connection:
+1. In the BigQuery Explorer, navigate to **External Connections**
+2. Find and click on your newly created connection
+3. Copy the **Service Account ID** for the next step
+
+## Step 3: Grant Vertex AI Access Permissions
+
+Now you need to give the connection's service account permission to access Vertex AI:
+
+1. In the Google Cloud Console, go to **IAM & Admin**
+2. Click **+ Grant Access**
+3. Under "New principals", paste the service account ID you copied
+4. Assign the **Vertex AI User** role
+5. Click **Save**
+
+## Step 4: Create an LLM Model Interface in BigQuery
+
+1. In the BigQuery Explorer, navigate to **External Connections**
+2. Find again your newly created connection from previous step and clikc on it
+3. Copy the **Connection ID** (format: `projects/<project-name>/locations/<region>/connections/<connection-name>`)
+4. [Select a model endpoint](https://cloud.google.com/bigquery/docs/reference/standard-sql/bigqueryml-syntax-create-remote-model#gemini-api-multimodal-models). You can use `gemini-1.5-pro-002` as a default endpoint.
+5. Run the following SQL query to create a model in your dataset:
 
 ```sql
- CREATE OR REPLACE MODEL
-  `<your-project>.<your-dataset>.<choose-a-name-for-your-model>`
+CREATE OR REPLACE MODEL
+  `<your-project>.<your-dataset>.<name-your-model>`
 REMOTE WITH CONNECTION
-  `<remote-connection-id>` 
+  `<paste-here-your-connection-id>` 
 OPTIONS (
-  endpoint = '<your-model-endpoint>'
+  endpoint = '<model-endpoint>'
 );
 ```
 
-Here's an example - 
+### Example
+
 ```sql
- CREATE OR REPLACE MODEL
-  `my-project.my-dataset.test_model`
+CREATE OR REPLACE MODEL
+  `my-project.my-dataset.gemini_model`
 REMOTE WITH CONNECTION
-  `projects/my-project/locations/us/connections/test_con_model` 
+  `projects/my-project/locations/us/connections/my-remote-connection-model-name` 
 OPTIONS (
   endpoint = 'gemini-1.5-pro-002'
 );
 ```
 
-Step 5 - running an unstructured data test
-```yml
+> **Note:** During development, we used `gemini-1.5-pro` and recommend it as the default model for unstructured data tests in BigQuery.
+
+### Additional Resources
+
+- [Available models and endpoints](https://cloud.google.com/bigquery/docs/reference/standard-sql/bigqueryml-syntax-create-remote-model#gemini-api-multimodal-models)
+- [Documentation on creating remote models](https://cloud.google.com/bigquery/docs/reference/standard-sql/bigqueryml-syntax-create-remote-model)
+
+## Step 5: Running an Unstructured Data Test
+
+Once your model is set up, you can reference it in your Elementary tests:
+
+```yaml
 models:
   - name: table_with_unstructured_data
     description: "A table containing unstructured text data."
@@ -61,10 +99,8 @@ models:
         tests:
           - elementary.validate_unstructured_data:
               expectation_prompt: "The text data should represent an example of unstructured data."
-              llm_model_name: "test_model"
+              llm_model_name: "gemini_model"
 ```
 
-Link to get more details - 
-https://cloud.google.com/bigquery/docs/reference/standard-sql/bigqueryml-syntax-create-remote-model
 
-TODO: find a link with supported models and their endpoints
+
