--- a/docs/data-tests/unstructured-data-tests/bigquery-setup.mdx
+++ b/docs/data-tests/unstructured-data-tests/bigquery-setup.mdx
@@ -70,7 +70,7 @@ OPTIONS (
 
 ```sql
 CREATE OR REPLACE MODEL
-  `my-project.my-dataset.gemini_model`
+  `my-project.my-dataset.gemini-1.5-pro`
 REMOTE WITH CONNECTION
   `projects/my-project/locations/us/connections/my-remote-connection-model-name` 
 OPTIONS (
@@ -99,7 +99,7 @@ models:
         tests:
           - elementary.validate_unstructured_data:
               expectation_prompt: "The text data should represent an example of unstructured data."
-              llm_model_name: "gemini_model"
+              llm_model_name: "gemini-1.5-pro"
 ```
 
 
