Update unstructured data tests documentation with platform-specific setup guides

--- a/docs/data-tests/unstructured-data-tests/bigquery.mdx
+++ b/docs/data-tests/unstructured-data-tests/bigquery.mdx
@@ -1,5 +1,5 @@
 ---
-title: "BigQuery setup"
+title: "BigQuery Vertex AI"
 description: "Learn how to configure BigQuery to use Vertex AI models for unstructured data validation tests"
 ---
 
