--- a/docs/data-tests/unstructured-data-tests/data-lakes.mdx
+++ b/docs/data-tests/unstructured-data-tests/data-lakes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Data lakes setup"
+title: "Data lakes"
 ---
 
 Currently, you can apply Elementary's unstructured data validation tests on data lakes using Snowflake, Databricks, or BigQuery external object tables.
