--- a/docs/data-tests/unstructured-data-tests/quickstart.mdx
+++ b/docs/data-tests/unstructured-data-tests/quickstart.mdx
@@ -2,6 +2,10 @@
 title: "Quickstart"
 ---
 
+<Note type="warning">
+  **Beta Feature**: Unstructured data validation tests is currently in beta. The functionality and interface may change in future releases.
+</Note>
+
 # Validating Unstructured Data with Elementary
 
 ## What is Unstructured Data Validation?
@@ -25,24 +29,24 @@ Before you can use Elementary's unstructured data validations, you need to set u
 ### Snowflake
 - **Prerequisite**: Enable Snowflake Cortex AI LLM functions
 - **Recommended Model**: `claude-3-5-sonnet`
-- [View Detailed Snowflake Setup Guide](/data-tests/unstructured-data-tests/snowflake-setup.mdx)
+- [View Snowflake's Guide](/data-tests/unstructured-data-tests/snowflake)
 
 ### Databricks
 - **Prerequisite**: Ensure Databricks AI Functions are available
 - **Recommended Model**: `databricks-meta-llama-3-3-70b-instruct`
-- [View Detailed Databricks Setup Guide](/data-tests/unstructured-data-tests/databricks-setup.mdx)
+- [View Databrick's Setup Guide](/data-tests/unstructured-data-tests/databricks)
 
 ### BigQuery
 - **Prerequisite**: Configure BigQuery to use Vertex AI models
 - **Recommended Model**: `gemini-1.5-pro`
-- [View Detailed BigQuery Setup Guide](/data-tests/unstructured-data-tests/bigquery-setup.mdx)
+- [View BigQuery's Setup Guide](/data-tests/unstructured-data-tests/bigquery)
 
 ### Redshift
 - Support coming soon
 
 ### Data Lakes
 - Currently supported through Snowflake, Databricks, or BigQuery external object tables
-- [View Data Lakes Information](/data-tests/unstructured-data-tests/data-lakes-setup.mdx)
+- [View Data Lakes Information](/data-tests/unstructured-data-tests/data-lakes)
 
 
 ## Using the Validation Test
