--- a/docs/data-tests/unstructured-data-tests/redshift.mdx
+++ b/docs/data-tests/unstructured-data-tests/redshift.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Redshift setup"
+title: "Redshift"
 ---
 
 Elementary's unstructured data validation tests do not currently support Redshift.
